--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
-spring.mvc.view.prefix=/WEB-INF/tiles/
-spring.mvc.view.suffix=.jsp
+spring.datasource.url=jdbc:mysql://localhost:3306/java1
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+#ddl-data-definition language. This option tells hibernate whethere to create database for as or not
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
