--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.3.4.RELEASE</version>
 		</dependency>
+		  <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+        <version>2.2.6.RELEASE</version>
+      </dependency>
 	</dependencies>
 	<build>
 		<plugins>
